converter-cppは使えない

--- a/locales/en.json
+++ b/locales/en.json
@@ -16,7 +16,7 @@
     "text_please_drop" : "Drop file or folder.",
     "Run_waifu2x" : "Run waifu2x",
     "file" : "file",
-    "DEL": "DELETE ALL",
+    "DEL": "RELOAD",
     "PAUSE": "PAUSE",
     "processorder": "Processing",
     "file_setting": "Files",
