--- a/locales/ja.json
+++ b/locales/ja.json
@@ -16,7 +16,7 @@
     "text_please_drop" : "ファイルやフォルダーをドロップしてください。",
     "Run_waifu2x" : "実行",
     "file" : "ファイル",
-    "DEL": "すべて削除",
+    "DEL": "再読込",
     "PAUSE": "ポーズ",
     "processorder": "処理設定",
     "file_setting": "入出力設定",
